k8s/staging/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: {name}
  name: {name}
spec:
  revisionHistoryLimit: 0
  template:
    metadata:
      annotations:
        chaos.alpha.kubernetes.io/enabled: "true"
      labels:
        name: {name}
    spec:
      containers:
      - name: {name}
        image: vizzuality/{name}
        imagePullPolicy: Always
        args:
          - start
        resources:
          requests:
            memory: "0Mi"
            cpu: "0m"
        ports:
          - containerPort: 3000
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /api/partners
            port: 3000
          initialDelaySeconds: 60
          timeoutSeconds: 5
          periodSeconds: 30
      restartPolicy: Always
