k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: rw
  labels:
    name: resource-watch-manager
  name: resource-watch-manager
spec:
  ports:
    - port: 3000
  selector:
    name: resource-watch-manager
